--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,3 +33,27 @@
     font-weight: 400;
     font-style: normal;
   }
+@font-face {
+    font-family: 'DMSans Bold';
+    src: url('./fonts/DMSans_18pt-Bold.ttf') format('opentype');
+    font-weight: 400;
+    font-style: normal;
+  }
+@font-face {
+    font-family: 'DMSans Medium';
+    src: url('./fonts/DMSans_18pt-Medium.ttf') format('opentype');
+    font-weight: 400;
+    font-style: normal;
+  }
+@font-face {
+    font-family: 'DMSans Regular';
+    src: url('./fonts/DMSans_18pt-Regular.ttf') format('opentype');
+    font-weight: 400;
+    font-style: normal;
+  }
+@font-face {
+    font-family: 'DMSans SemiBold';
+    src: url('./fonts/DMSans_18pt-SemiBold.ttf') format('opentype');
+    font-weight: 400;
+    font-style: normal;
+  }
