--- a/client/src/index.css
+++ b/client/src/index.css
@@ -57,3 +57,27 @@
     font-weight: 400;
     font-style: normal;
   }
+@font-face {
+    font-family: 'Inter Bold';
+    src: url('./fonts/Inter_18pt-Bold.ttf') format('opentype');
+    font-weight: 400;
+    font-style: normal;
+  }
+@font-face {
+    font-family: 'Inter Medium';
+    src: url('./fonts/Inter_18pt-Medium.ttf') format('opentype');
+    font-weight: 400;
+    font-style: normal;
+  }
+@font-face {
+    font-family: 'Inter Regular';
+    src: url('./fonts/Inter_18pt-Regular.ttf') format('opentype');
+    font-weight: 400;
+    font-style: normal;
+  }
+@font-face {
+    font-family: 'Inter SemiBold';
+    src: url('./fonts/Inter_18pt-SemiBold.ttf') format('opentype');
+    font-weight: 400;
+    font-style: normal;
+  }
